--- a/bin/web_files/templates/navbar.tmpl
+++ b/bin/web_files/templates/navbar.tmpl
@@ -60,6 +60,8 @@
 
                 <li><a href="/connectivity"><i class="fa fa-asterisk"></i><span class="hidden-tablet"> Connectivity</span></a></li>
 
+                <li><a href="/clicker"><i class="fa fa-asterisk"></i><span class="hidden-tablet"> Clicker</span></a></li>
+
                 <li><a href="http://www.openwsn.org/" target="_blank"><i class="fa fa-book"></i><span class="hidden-tablet"> Documentation</span></a></li>
 
                 %if roverMode == True :
