--- a/openvisualizer/moteConnector/static/css/styles.css
+++ b/openvisualizer/moteConnector/static/css/styles.css
@@ -11719,3 +11719,38 @@ input[type=button], input[type=submit], input[type=reset] {
   margin: 10px 20px;
   cursor: pointer;
 }
+
+.timer{
+  position: relative;
+  width: 100%;
+  height:10px; 
+  animation-name: timer_bar;
+  animation-timing-function: linear;
+  
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-fill-mode: forwards;
+  animation-play-state: running;
+}
+@keyframes timer_bar{
+  0%{
+      background-color: #0d6efd;
+      width: 100%;
+  }
+  25%{
+    background-color: #20c997;
+    width: 75%;
+  }
+  50%{
+    background-color: yellow;
+    width: 50%;
+  }
+  75%{
+    background-color: orange;
+    width: 25%;
+  }
+  100%{
+      background-color: red;
+      width: 0%;
+  }
+}
