--- a/openvisualizer/moteConnector/templates/start_quiz.html
+++ b/openvisualizer/moteConnector/templates/start_quiz.html
@@ -10,6 +10,8 @@
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
         <link href="../static/css/styles.css" rel="stylesheet" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" crossorigin="anonymous"></script>
+        <!-- Timer -->
+        <meta http-equiv="refresh" content="{{quiz_time}}; URL=/results">
     </head>
     <body class="sb-nav-fixed">
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
@@ -42,11 +44,12 @@
             </div>
             <div id="layoutSidenav_content">
                 <main>
+                    <div class="timer" style="animation-duration: {{quiz_time}}s;"></div>
                     <div class="container-fluid px-4">
                         <!-- 자동 줄바꿈 -->
                         <p class="mt-4 text-center" style="font-size: 90px; word-break: break-all">{{question}}</p>
-                        <p class="card" style="font-size: 50px; background-color: #0d6efd;"><strong>O</strong> {{option1}}</p>
-                        <p class="card" style="font-size: 50px; background-color: #dc3545;"><strong>X</strong> {{option2}}</p>
+                        <p class="card" style="font-size: 50px; background-color: #0d6efd;"><b>O</b> {{option1}}</p>
+                        <p class="card" style="font-size: 50px; background-color: #dc3545;"><b>X</b> {{option2}}</p>
                     </div>
                 </main>
                 <footer class="py-4 bg-light mt-auto">
