--- a/openvisualizer/moteConnector/templates/results.html
+++ b/openvisualizer/moteConnector/templates/results.html
@@ -48,22 +48,28 @@
                             <li class="breadcrumb-item active">결과페이지입니다.</li>
                         </ol>
                     </div>
-                    <table border>
-                        <thead>
-                            <th>MAC</th>
-                            <th>answer</th>
-                            <th>ASN</th>
-                        </thead>
-                        <tbody>
-                            {% for result in result_list %}
-                                <tr>
-                                    <td><a>{{result[0]}}</a></td>
-                                    <td><a>{{result[1]}}</a></td>
-                                    <td><a>{{result[2]}}</a></td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
+                    <div class="card-header">
+                        <i class="fas fa-table me-1"></i>
+                        (날짜 넣으면 될듯)
+                    </div>
+                    <div class="card-body">
+                        <table id="datatablesSimple">
+                            <thead>
+                                <th>MAC</th>
+                                <th>answer</th>
+                                <th>ASN</th>
+                            </thead>
+                            <tbody>
+                                {% for result in result_list %}
+                                    <tr>
+                                        <td><a>{{result[0]}}</a></td>
+                                        <td><a>{{result[1]}}</a></td>
+                                        <td><a>{{result[2]}}</a></td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
                 </main>
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
