--- a/openvisualizer/moteConnector/templates/start_quiz.html
+++ b/openvisualizer/moteConnector/templates/start_quiz.html
@@ -49,7 +49,7 @@
                         <!-- 자동 줄바꿈 -->
                         <p class="mt-4 text-center" style="font-size: 90px; word-break: break-all">{{question}}</p>
                         <p class="card" style="font-size: 50px; background-color: #0d6efd;"><b>O</b> {{option1}}</p>
-                        <p class="card" style="font-size: 50px; background-color: #dc3545;"><b>X</b> {{option2}}</p>
+                        <p class="card" style="font-size: 50px; background-color: #ff9999;"><b>X</b> {{option2}}</p>
                     </div>
                 </main>
                 <footer class="py-4 bg-light mt-auto">
