그래프 수정
질문이랑 보기 라벨링

--- a/openvisualizer/moteConnector/templates/quiz.html
+++ b/openvisualizer/moteConnector/templates/quiz.html
@@ -54,8 +54,8 @@
                             <textarea name="question" rows="10" cols="30" placeholder="질문을 입력하세요."></textarea>
                             <br>
                             <label for="O">Options:</label><br>
-                            <textarea name="option1" class="textarea-ex" placeholder="보기1"></textarea>
-                            <textarea name="option2" class="textarea-ex" placeholder="보기2"></textarea>
+                            <textarea name="option1" class="textarea-ex" value="o" placeholder="보기1"></textarea>
+                            <textarea name="option2" class="textarea-ex" value="x" placeholder="보기2"></textarea>
                             <br>
                             <div class="row" style="margin-top: 20px">
                                 <div class="col-xl-8">
