--- a/openvisualizer/moteConnector/static/css/styles.css
+++ b/openvisualizer/moteConnector/static/css/styles.css
@@ -11754,3 +11754,58 @@ input[type=button], input[type=submit], input[type=reset] {
       width: 0%;
   }
 }
+
+#cone {
+  width: 0;
+  height: 0;
+  border-left: 70px solid transparent;
+  border-right: 70px solid transparent;
+  border-top: 100px solid red;
+  border-radius: 50%;
+}
+
+#pacman {
+  width: 0px;
+  height: 0px;
+  border-right: 60px solid blue;
+  border-top: 60px solid red;
+  border-left: 60px solid red;
+  border-bottom: 60px solid red;
+  border-radius: 50%;
+}
+.pie {
+  width: 100px; height: 100px;
+  border-radius: 50%;
+  background: yellowgreen;
+  background-image:
+  linear-gradient(to right, transparent 50%, #655 0);
+}
+
+.chart {
+  size: 20px;
+  background: 
+      conic-gradient(#0d6efd 4%, 
+      #ff9999 0
+      );
+  border-radius: 50%;
+  width: 30%;
+  height: 0;
+  padding-top: 30%;
+  float: left;
+  padding-left: 20px;
+  margin: 20px;
+  margin-bottom: 100px;
+  }
+
+  .key {
+    color: whitesmoke;
+    width: 30%;
+    float: left;
+    list-style: none;
+    display: table;
+    border-collapse: separate;
+    background-color: transparent;
+    padding: 20px;
+    font-size: 20px;
+    margin-right: 30px;
+  }
