--- a/openvisualizer/moteConnector/templates/results.html
+++ b/openvisualizer/moteConnector/templates/results.html
@@ -42,20 +42,32 @@
             </div>
             <div id="layoutSidenav_content">
                 <main>
-                    <div class="container-fluid px-4">
-                        <h1 class="mt-4">Results</h1>
-                    </div>
                     <div class="card-header">
                         <i class="far fa-chart-bar" aria-hidden="true"></i>
                         응답 결과
                     </div>
+                    <h1 style="margin-left: 30px; margin-top: 20px">
+                        {{question}}
+                    </h1>
                     <div class="card-body">
-                        <img src="/plot" alt="result image">
+                        <div class="chart" style="background: conic-gradient(#0d6efd {{o}}%, #ff9999 0);"></div>
+                        <ul class="key">
+                            <li style="background-color: #0d6efd; padding: 20px">
+                                <strong class="percent red">{{o}}%</strong>
+                                <span class="choice">{{option1}}</span>
+                            </li>
+                            <li  style="background-color: #ff9999; padding: 20px">
+                                <strong class="percent gray">{{x}}%</strong>
+                                <span class="choice">{{option2}}</span>
+                            </li>
+                        </ul>
                     </div>
-                    <div class="card-header">
+                    
+                    <div class="card-header" style="margin-top: 440px">
                         <i class="fas fa-table me-1"></i>
                         {{date}}
                     </div>
+                    <p></p>
                     <div class="card-body">
                         <table id="datatablesSimple">
                             <thead>
