--- a/openvisualizer/moteConnector/templates/quiz.html
+++ b/openvisualizer/moteConnector/templates/quiz.html
@@ -49,6 +49,7 @@
                         </ol>
                     </div>
                     <div class="col-xl-10" style="margin-left: 20px">
+                        <!-- Receive information -->
                         <form action="/start_quiz" method="POST">
                             <label for="question">Question:</label><br>
                             <textarea name="question" rows="10" cols="30" placeholder="질문을 입력하세요."></textarea>
