--- a/openvisualizer/moteConnector/templates/start_quiz.html
+++ b/openvisualizer/moteConnector/templates/start_quiz.html
@@ -44,6 +44,7 @@
             </div>
             <div id="layoutSidenav_content">
                 <main>
+                    <!-- quiz time animation with css -->
                     <div class="timer" style="animation-duration: {{quiz_time}}s;"></div>
                     <div class="container-fluid px-4">
                         <!-- 자동 줄바꿈 -->
